# allshire

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  allshire.go  go.mod  run.sh  version.go
cmd/: BUILD.bazel  main.go
{{ cookiecutter.project_slug }}/: .goreleaser.yaml  Makefile  magefile.go  main.go
